# porcle

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: levels.ldtk
assets/images/: ouroboros.aseprite
assets/particles/: ball.particle.ron  bg.particle.ron  core.particle.ron  core_clear.particle.ron  enemy.particle.ron  gun.particle.ron  reflection.particle.ron
docs/: todo.md
src/: dev_tools.rs  event.rs  ext.rs  lib.rs  main.rs
src/game/: assets.rs  ball.rs  core.rs  gun.rs  input.rs  mod.rs  movement.rs  paddle.rs  score.rs  time.rs  tween.rs
src/game/audio/: sfx.rs  soundtrack.rs
src/game/spawn/: ball.rs  despawn.rs  enemy.rs  fruit.rs  level.rs  mod.rs  paddle.rs  player.rs  projectile.rs
src/screen/: credits.rs  game_over.rs  loading.rs  mod.rs  playing.rs  splash.rs  title.rs  tutorial.rs
src/theme/: interaction.rs  widget.rs
src/ui/: interaction.rs  palette.rs  widgets.rs
web/: index.html
